# NIQSV

./: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
Code_NIQSV+/: IRCCyN.m  IRCCyN_performance.m  IRCCyN_scores.mat  NIQSV.m  NIQSV_plus.m  Ver_G_width.m  cirmtx.m  filenames.mat  list.py  list.txt  predicted_scores.mat  readme.txt  score.txt  scores.mat  test.rar
